Added answer to line-count.R in novice R lesson 06.

--- a/novice/r/06-cmdline.Rmd
+++ b/novice/r/06-cmdline.Rmd
@@ -353,6 +353,10 @@ And now we're done: the program now does everything we set out to do.
     *   If no filenames are given, it reports the number of lines in standard input.
     *   If one or more filenames are given, it reports the number of lines in each, followed by the total number of lines.
 
+```{r line-count-answer, include=FALSE, engine='bash'}
+cat line-count.R
+```
+
 <div class="keypoints" markdown="1">
 #### Key Points
 
